Changes to be committed: 	new file:   libs/common/src/entities/customer.entity.ts 	new file:   libs/common/src/entities/index.ts 	new file:   libs/common/src/entities/product.entity.ts 	modified:   libs/common/src/index.ts 	new file:   libs/common/src/swagger/index.ts 	new file:   libs/common/src/swagger/iswagger.ts 	new file:   libs/common/src/swagger/swagger.ts 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app.module.ts 	deleted:    src/customer/entities/customer.entity.ts 	modified:   src/main.ts 	modified:   src/product/dto/create-product.dto.ts 	deleted:    src/product/entities/product.entity.ts 	modified:   src/product/services/product.service.ts 	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjsi/class-validator": "^0.2.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
