Changes to be committed: 	modified:   .env 	modified:   libs/common/src/common.module.ts 	deleted:    libs/common/src/config/database.ts 	modified:   libs/common/src/config/index.ts 	new file:   libs/common/src/config/typeorm.config.ts 	modified:   package.json 	modified:   src/app.module.ts 	modified:   src/main.ts 	modified:   src/product/product.module.ts 	modified:   src/product/services/product.service.ts 	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjsi/class-validator": "^0.2.2",
+    "class-transformer": "^0.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
